# Practice

./: .gitignore  README.md
Area of a Triangle/C++/: main.cpp
Area of a Triangle/Python/: main.py
C++/Area of a triangle/: functions.cpp  functions.hpp
C++/Left, right shift/: C++.sln
C++/Left, right shift/C++/: main.cpp
C++/Two sums/: functions.cpp
Left, Right Shift/C++/C++/: C++.vcxproj.filters
Left, Right Shift/C++/C++/C++/: C++.vcxproj  Header.h  Source.cpp  main.cpp
Left, Right Shift/C++/Left, Right Shift/: Left, Right Shift.sln
Left, Right Shift/C++/Left, Right Shift/Left, Right Shift/: Header.h  Left, Right Shift.vcxproj  Source.cpp  main.cpp
Left, Right Shift/C++/Left, Right Shift/Left, Right Shift/Debug/: vc141.idb
Left, Right Shift/C++/Left, Right Shift/Left, Right Shift/Debug/Left, Ri.A766AD99.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Left, Right Shift.lastbuildstate
Left, Right Shift/lua/: main.lua
Lua/Area of a triangle/: main.lua
Lua/Hamming/: Hamming.lua
Lua/House/: House.lua
Lua/Left, right shift/: main
Two Sums/C++/: CMakeLists.txt  CMakeLists.txt.save  functions.cpp  functions.hpp  main.cpp
Two Sums/C++/TwoSums/: TwoSums.cbp  TwoSums.depend
Two Sums/Lua/: main.lua
